# TeraStitcher

./: .gitignore  CMakeLists.txt  DESCRIPTION.txt  LICENSE.txt  LICENSE_APPLE.txt  README.md  changelog.txt  index.html  params.json  xml_import.xml
cmake/: InstallLocation.cmake  Setup.cmake  TeraStitcherCPack.cmake  TeraStitcherCPackOptions.cmake.in  Version.cmake
images/: Thumbs.db  icons.pptx  release_logos.pptx
src/: CMakeLists.txt  version.cmake
src/CrossMIPs/: CrossMIPs.h  compute_funcs.cpp  libcrossmips.cpp
src/GUI/: GUI_config.h  TeraStitcherCLI.cpp  TeraStitcherCLI.h  main.cpp
src/IOManager/: CMakeLists.txt  ProgressBar.cpp
src/IOManager/plugins/exampleplugin2D/: exampleplugin2D.cpp
src/IOManager/plugins/opencv2D/: opencv2D.cpp
src/Stitcher/: CMakeLists.txt  PDAlgo.h  StackRestorer.h  StackStitcher.h
src/VolumeManager/: Stack.cpp  StackedVolume.cpp  StackedVolume.h  VM_config.h  vmBlockVolume.h  vmStack.cpp  vmStackedVolume.cpp  vmVirtualVolume.h
src/common/: CMakeLists.txt  ProgressBar.cpp  ProgressBar.h  QProgressSender.h  config.cpp  config.h
src/cpack/: README.txt  options.cmake
src/crossmips/: CMakeLists.txt  CrossMIPs.h  block_reduce.h  compute_funcs.cpp  compute_funcs.cu  compute_funcs.h  device_reduce_shfl_shmem.h  libcrossmips.cpp  warp_reduce.h
src/gui/: CDisplComp.cpp  CMakeLists.txt  CMergeTiles.cpp  CMergeTiles.h  CPreview.cpp  PTabDisplComp.cpp  PTabDisplComp.h  PTabDisplProj.cpp  PTabDisplThresh.cpp  PTabImport.cpp  PTabImport.h  PTabMergeTiles.cpp  PTabMergeTiles.h  PTabPlaceTiles.cpp  PTeraStitcher.cpp  PTeraStitcher.h  QHelpBox.cpp
src/imagemanager/: BDVVolume.cpp  BDVVolume.h  Block.cpp  CMakeLists.txt  ComposedVolume.cpp  ComposedVolume.h  HDF5Mngr.cpp  HDF5Mngr.h  IMS_HDF5Mngr.cpp  IMS_HDF5Mngr.h  IM_config.cpp  IM_config.h  MappedVolume.cpp  MappedVolume.h  MultiCycleVolume.cpp  MultiCycleVolume.h  MultiSliceVolume.cpp  MultiSliceVolume.h  RawFmtMngr.cpp  RawFmtMngr.h  RawVolume.cpp  RawVolume.h  SimpleVolume.cpp  SimpleVolume.h  SimpleVolumeRaw.cpp  SimpleVolumeRaw.h  Stack.cpp  Stack.h  StackRaw.cpp  StackRaw.h  StackedVolume.cpp  StackedVolume.h  Tiff3DMngr.cpp  Tiff3DMngr.h  TiledMCVolume.cpp  TiledMCVolume.h  TiledVolume.cpp  TiledVolume.h  TimeSeries.cpp  TimeSeries.h  (+9 more)
src/iomanager/: CMakeLists.txt  IOPluginAPI.h  iomanager.config.cpp  iomanager.config.h  ioplugins.h
src/iomanager/plugins/IMS_HDF5/: CMakeLists.txt  IMS_HDF5.cpp  IMS_HDF5Mngr.cpp  IMS_HDF5Mngr.h
src/iomanager/plugins/bioformats2D/: CMakeLists.txt  bioformats2D.cpp  bioformats2D.h
src/iomanager/plugins/bioformats3D/: bioformats3D.cpp  bioformats3D.h  bioformats_basecode.inc
src/iomanager/plugins/dcimg/: dcimg.cpp
src/iomanager/plugins/exampleplugin2D/: exampleplugin2D.cpp  exampleplugin2D.h
src/iomanager/plugins/opencv2D/: opencv2D.cpp
src/iomanager/plugins/tiff2D/: tiff2D.cpp
src/iomanager/plugins/tiff3D/: tiff3D.cpp
src/multilayersmanager/: MergeTiles2.cpp  MultiLayers.cpp  MultiLayers.h  StackStitcher2.cpp  StackStitcher2.h
src/stitcher/: CMakeLists.txt  Displacement.cpp  Displacement.h  DisplacementMIPNCC.cpp  DisplacementMIPNCC.h  MergeTiles.cpp  PDAlgo.h  PDAlgoMIPNCC.cpp  PDAlgoMIPNCC.h  S_config.h  StackRestorer.cpp  StackRestorer.h  StackStitcher.cpp  StackStitcher.h  TPAlgo.cpp  TPAlgo.h  TPAlgoLQP.cpp  TPAlgoLQP.h  TPAlgoMST.cpp  TPAlgoMST.h  resumer.cpp  resumer.h
src/ui/: CLI.cpp  CLI.h  CMakeLists.txt  GUI_config.h  main.cpp
src/utils/example/: CMakeLists.txt
src/utils/mappingmanager/: MappingObjects.h
src/utils/matlablib/: CMakeLists.txt  mexfunction.cpp
src/utils/mdatagenerator/: CMakeLists.txt  TemplateCLI.cpp  TemplateCLI.h  mdatagenerator.cpp
src/utils/mergedisplacements/: CMakeLists.txt  TemplateCLI.cpp  TemplateCLI.h  displacementManager.cpp  displacementManager.h  mergedisplacements.cpp
src/utils/pyscripts/: LQP_HE.py  Parastitcher.py  README.txt  paraconverter.py
src/utils/subvolextractor/: CMakeLists.txt
src/utils/teraconverter/: CMakeLists.txt  GUI_config.h  TemplateCLI.cpp  TemplateCLI.h  teraconverter.cpp
src/utils/terastitcher2/: CMakeLists.txt  TeraStitcher2CLI.cpp  TeraStitcher2CLI.h  terastitcher2.cpp
src/utils/volumeconverter/: CMakeLists.txt  VolumeConverter.cpp  VolumeConverter.h  resumer.cpp  resumer.h  vcresumer.cpp  vcresumer.h
src/volumemanager/: CMakeLists.txt  vmBlock.cpp  vmBlock.h  vmBlockVolume.cpp  vmBlockVolume.h  vmCacheManager.cpp  vmMCVolume.cpp  vmMCVolume.h  vmStack.cpp  vmStack.h  vmStackedVolume.cpp  vmStackedVolume.h  vmVirtualStack.cpp  vmVirtualStack.h  vmVirtualVolume.cpp  vmVirtualVolume.h  volumemanager.config.cpp  volumemanager.config.h
stylesheets/: stylesheet.css
trunk/src/: CMakeLists.txt
trunk/src/CrossMIPs/: CrossMIPs.h  compute_funcs.h  libcrossmips.cpp
trunk/src/GUI/: CMakeLists.txt  GUI_config.h  TeraStitcherCLI.cpp  TeraStitcherCLI.h  main.cpp
trunk/src/IOManager/: IOManager.cpp  IOManager_defs.h  ProgressBar.cpp
trunk/src/IOManager/plugins/tiff3D/: tiff3D.cpp
trunk/src/Stitcher/: PDAlgoMIPNCC.h  StackRestorer.cpp  StackStitcher.cpp  StackStitcher.h  TPAlgoMST.cpp
trunk/src/VolumeManager/: CMakeLists.txt  Stack.cpp  Stack.h  StackedVolume.cpp  StackedVolume.h  VM_config.h  vmBlock.h  vmStackedVolume.h
trunk/src/imagemanager/: CMakeLists.txt
trunk/src/iomanager/plugins/opencv2D/: opencv2D.h
trunk/src/iomanager/plugins/tiff3D/: tiff3D.h
trunk/src/stitcher/: PDAlgoMIPNCC.cpp  StackRestorer.h
trunk/src/ui/: GUI_config.h  main.cpp
trunk/src/volumemanager/: vmBlock.cpp  vmBlockVolume.cpp  vmStack.h  vmVirtualStack.h  volumemanager.config.cpp
